Remove pagination hardcoded width, fix 'More articles' from flowing outside the page on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -235,10 +235,6 @@ div.main-container {
 
     }
 
-    div.pagination {
-        width: 580px;
-    }
-
 }
 
 
